# dep-age

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/dep_age/: __init__.py  __main__.py  cli.py  config.py  models.py
src/dep_age/enrichment/: age_calculator.py  cache.py  cve_checker.py  registry.py
src/dep_age/output/: badge.py  csv_output.py  json_output.py  markdown_output.py  terminal.py
src/dep_age/parsers/: __init__.py  base.py  cargo_parser.py  composer_parser.py  gem_parser.py  go_parser.py  npm_parser.py  pip_parser.py
src/dep_age/scoring/: summary.py  urgency.py
tests/: test_cli.py  test_cli_extra.py  test_output.py  test_scoring.py  test_scoring_extra.py  test_summary.py
tests/enrichment/: test_age_calculator.py  test_cache.py  test_cve_checker.py  test_cve_extra.py  test_registry.py  test_registry_extra.py
tests/fixtures/: go.sum  package-lock.json  requirements.txt
tests/parsers/: test_cargo_parser.py  test_composer_parser.py  test_gem_parser.py  test_go_parser.py  test_manifest_parsers.py  test_npm_extra.py  test_npm_parser.py  test_pip_extra.py  test_pip_parser.py
